package com.github.studeasy.dao.ServiceDAO;

/**
 * The Service DAO using a MySQL database
 * Contains all the methods accessing service related data
 */
public class MySQLServiceDAO {

}
