package com.github.studeasy.dao.serviceDAO;

/**
 * Abstract class for the Service DAO
 * Contains the methods needed by the Service DAO
 */
public abstract class ServiceDAO {

}
