package com.github.studeasy.logic.facades;

/**
 * The Facade Service for the ServiceDAO
 * It contains methods service related
 */
public class FacadeService {

}
